@@ -1,3 +1,5 @@
+DIST clementine-0.3.99.tar.gz 4642186 RMD160 cf66818e8bd01d4c2957613e3d53f0c7c6daf61f SHA1 29cbdc71e3e03a1b4f890535e7fd58f0b9d4dcb6 SHA256 cff31417261e77356311bbf5ac670ffdbb75eb5d068c5d54753a110c75e59f7e
+EBUILD clementine-0.3.99.ebuild 1923 RMD160 0ea75946198a6781be52d6ca3eb8eed5ab9b0196 SHA1 2ed16de98e1337979aea4ba6c2e8150bd71de207 SHA256 844bc3aa0f10be8afdff1f8ca0d7d98731046132d6ab9ad596c177350963950b
 EBUILD clementine-9999.ebuild 2501 RMD160 719e075ddeea10421f69b965a5dab5b06b732603 SHA1 a919df4fc1b9248bf1c516d8e7d50812efdaf8a4 SHA256 c15bf7dede58a0dc983b85ceaa6a5573b02b1e43c42866a7e13aac3bd1aa2268
-MISC ChangeLog 492 RMD160 3fd86425f63beda8b7477482203237331daf468b SHA1 d8ce153fbe14c307213d0b983da22abed8bc5b3c SHA256 6f46af4af2f02f8dfe064479e73a776d515ecc8739358800fc2ab269afa5ea72
+MISC ChangeLog 611 RMD160 cb90610b2d63903f8d3061a1999500b22770ae87 SHA1 9ce9fd736deed3a8a64939d65fd457a5aa0448ab SHA256 cc3c5caa65af05597df5b2268e784871327c3a9a0e94b582e661ae07f018d192
 MISC metadata.xml 366 RMD160 57edb246583996360d3f18a67246f9edf7d4698b SHA1 a0b336051f74e47a50e4978d038e9ebc8a4c55da SHA256 d814214186c00863c84944669888779fd113f4a37692134522b5d289835e9666
